--- a/C6Events/app/src/main/res/values/strings.xml
+++ b/C6Events/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Carbon</string>
     <string name="title_home">Home</string>
     <string name="title_explore">Explore</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_connect">Connect</string>
     <string name="title_settings">Settings</string>
 </resources>
