--- a/C6Events/app/src/main/res/values/strings.xml
+++ b/C6Events/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_explore">Explore</string>
     <string name="title_connect">Connect</string>
     <string name="title_settings">Settings</string>
+
+        <string name="hello_home_fragment">Home Fragment</string>
+        <string name="hello_explore_fragment">Explore Fragment</string>
+
 </resources>
