--- a/C6Events/app/src/main/res/values/strings.xml
+++ b/C6Events/app/src/main/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="title_connect">Connect</string>
     <string name="title_settings">Settings</string>
 
-        <string name="hello_home_fragment">Home Fragment</string>
-        <string name="hello_explore_fragment">Explore Fragment</string>
+    <string name="hello_home_fragment">Home Fragment</string>
+    <string name="hello_explore_fragment">Explore Fragment</string>
+    <string name="hello_connect_fragment">Connect Fragment</string>
+    <string name="hello_settings_fragment">Settings Fragment</string>
+
 
 </resources>
